[metadata]
name = nlweb
description = "A web API and UI for the Neurolang package"
long_description = file: README.rst
version = 0.0.1
url = https://github.com/NeuroLang/neurolang_web

[options]
install_requires =
    neurolang @ git+ssh://git@github.com/NeuroLang/NeuroLang
    neurolang-ipywidgets @ git+ssh://git@github.com/NeuroLang/neurolang-ipywidgets
    jupyter
    jupytext
    ipysheet
    nilearn
    ipywidgets
    traitlets
    pandas==0.25.3
    voila

[options.extras_require]
dev =
    black
    pre-commit
    flake8
test =
    pytest
