[metadata]
name = nlweb
description = "A web API and UI for the Neurolang package"
long_description = file: README.rst
version = 0.0.1
url = https://github.com/NeuroLang/neurolang_web

[options]

packages=find:

install_requires =
    neurolang @ git+https://github.com/NeuroLang/NeuroLang#egg=neurolang
    neurolang-ipywidgets @ git+https://github.com/NeuroLang/neurolang_ipywidgets#egg=neurolang-ipywidgets
    jupyter
    jupytext
    ipysheet
    nilearn
    ipywidgets
    traitlets
    pandas>=0.25.3
    plotly>=4.8.1
    voila
    ipympl

[options.extras_require]
dev =
    black
    pre-commit
    flake8
test =
    pytest
    pytest-cov
    pytest-tornasync